# SimpleRCS

./: .gitignore  pyproject.toml
simple_rcs/: _myersdiff_dmp.pyx  _myersdiff_ses.pyx  myersdiff.py  myersdiff_dmp.py  myersdiff_ses.py  pybsdiff.py  pydifflib.py  simple_rcs.py  simple_rcs_gpg.py
tests/unit_tests/: test_binary_roundtrip.py  test_metadata_only.py  test_pybsdiff.py  test_pybsdiff_compat.py  test_pybsdiff_realistic.py  test_pybsdiff_simple_compat.py  test_pydifflib.py  test_pydifflib_benchmark.py  test_simple_rcs.py
tools/: bench_diff.py  srcs_diff.py  srcs_log.py  srcs_sign_head.py
